# rs-poker

./: Cargo.toml
src/: bin.rs
src/core/: card.rs  card_iter.rs  deck.rs  errors.rs  hand.rs  mod.rs  rank.rs
