[package]
name = "rs_poker"
version = "0.5.4"
authors = ["Elliott Clark <eclark@apache.org>"]
keywords = ["cards", "poker"]
repository = "https://github.com/Enity/rs-poker"
edition = "2018"

[dependencies]
rand = "0.7.0"

[lib]
name = "rs_poker"
path = "src/lib.rs"

[[bin]]
name = "testbin"
path = "src/bin.rs"